# htmlGenius

./: .gitignore  DEVELOPMENT.md  README.md  RELEASE_NOTES.md  pyproject.toml
bridge/: LICENSE  README.md  app-server-client.mjs  bridge-health.mjs  bridge-host-manifest.json.template  bridge-install.mjs  candidate-workspace.mjs  claude-cli.mjs  codex-adapter.mjs  codex-app-server-client.mjs  copilot-adapter.mjs  copilot-runtime.mjs  host-runner.mjs  host.mjs  install-macos.mjs  native-protocol.mjs  package-lock.json  package.json  plan-workspace.mjs  prompt.mjs  provider-probe.mjs  provider-registry.mjs  run-manager.mjs  task-bundle.mjs
docs/: 2026-06-25-html-annotation-feedback-loop-design.html  2026-06-25-html-annotation-feedback-loop-design.md  2026-06-25-stage0-plan.md  2026-06-27-v0.2-html-editing-design.md  2026-06-27-v0.2-html-editing-plan.md  2026-06-30-v0.3-chrome-extension-design.md  2026-06-30-v0.3-chrome-extension-plan.md  2026-07-05-v0.4-deploy.md  2026-07-05-v0.4-plugin-collab-design.md  2026-07-05-v0.4-plugin-collab-plan.md  2026-07-06-v0.4.1-ui-redesign-design.md  2026-07-06-v0.5-lark-oauth-design.md  2026-07-06-v0.5-lark-oauth-plan.md  2026-07-08-v0.5-acceptance-tests.md  2026-07-15-v0.6-element-editing-design.md  2026-07-16-visual-editor-competitive-research.md  2026-07-17-landing-visual-directions-spec.md  2026-07-18-v0.6.1-change-contract-spec.md  2026-07-18-v0.6.2-artifact-version-reconciliation-plan.md  2026-07-18-v0.7-codex-local-bridge-spec.md  2026-07-19-v0.7.1-claude-code-handoff-spec.md  2026-07-20-night-pack-a-candidate-closed-loop-spec.md  (+16 more)
(+193 files in other folders)
