[project]
name = "htmlgenius"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pyjwt[crypto]>=2.8.0",
    "uvicorn[standard]>=0.39.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "playwright>=1.60.0",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
